Fixed padding on mobile

--- a/src/css/critical.css
+++ b/src/css/critical.css
@@ -313,7 +313,7 @@
     line-height: 1.4em;
     width: 100%;
     opacity: .9;
-    font-size: .8em;
+    font-size: .9em;
   }
 }
 /* Inbetween */
