--- a/src/css/local.css
+++ b/src/css/local.css
@@ -77,7 +77,7 @@
     line-height: 1.2em;
     text-align: left;
     max-width: 50rem;
-    margin: 0 auto .5rem;
+    margin: .5rem auto 1rem;
     color: var(--headerColor);
     position: relative;
   }
@@ -247,11 +247,11 @@
   }
   #sbs-r .cs-topper {
     font-size: var(--topperFontSize);
-    line-height: 1.2em;
+    line-height: 1.5em;
     text-transform: uppercase;
     text-align: left;
     letter-spacing: .1em;
-    font-weight: 700;
+    font-weight: 500;
     color: var(--primary);
     margin-bottom: 0.25rem;
     display: block;
